# ein-lang

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: ein_comparison.rs  embedding_bench.rs  fb15k237_bench.rs  forward_chain.rs  kocoro_comparison.py  sparse_join.rs  tensor_ops.rs
data/: countries.ein
examples/: attention.ein  family.ein  flights.ein  gpt2_shakespeare.ein  gpt_multihead.ein  gpt_nano.ein  gpt_shakespeare.ein  kb_benchmark.ein  matmul.ein  mlp.ein  neural_layer.ein  shakespeare.ein  soft_relations.ein  soft_rules.ein
examples/jepa/: jepa-basic.ein  jepa-gaps.md
experiments/logic/: benchmark_validation.ein  extreme_logic_tests.ein  phase1_test.ein  soft_logic_test.ein  triangle_count.ein
planning/: PLAN.md  PROGRESS.md
src/: error.rs  lib.rs  main.rs
src/embedding/: mod.rs  space.rs  trainer.rs
src/runtime/: context.rs  knowledge.rs  mod.rs
src/syntax/: ast.rs  mod.rs  parser.rs  token.rs
src/tensor/: einsum.rs  mod.rs  sparse.rs
